# Motorsports-SIDS

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Makefile  README.md
html/: adminPage.html  error.html  index.html  login.html
html/static/: adminPanel.css  adminPanel.js  cookieJar.js  index.js  login.css  login.js  style.css
omnikey_rs/: Cargo.toml
omnikey_rs/src/: lib.rs  structs.rs
src/: data_types.rs  global.rs  lib.rs  main.rs  websocket.rs
src/omnikey_rs/: mod.rs  structs.rs
