[package]
name = "motorsports_selfscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
futures-util = "0.3.30"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.196", features = ["derive"] }
text_io = "0.1.12"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
toml = "0.8.10"
warp = "0.3.6"
